fix portfolio overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -583,8 +583,9 @@ iframe {
 
 /*==================== PORTFOLIO ====================*/
 
+
 .portfolio__container {
-  overflow: initial;
+  overflow: hidden;
 }
 
 .portfolio__content {
